--- a/nextflow.config
+++ b/nextflow.config
@@ -1,17 +1,56 @@
 params {
-    sample_sheet_csv = null
+    // The sample sheet
+    sample_sheet_tsv = null
 
-    simpleaf_index {
+    // The reference barcode csv files
+    hto_reference_barcode_csv_gz = null
+    adt_reference_barcode_csv_gz = null
+
+    // The output directory
+    output_dir = null
+
+    // The number of threads to use
+    num_threads = 8
+
+    // "10xv2" or "10xv3"
+    chemistry = "10xv3"
+
+    // whether to use the piscem instead of salmon as the mapper 
+    use_piscem = false
+
+    // The parameters for building the index for mapping RNA-seq reads
+    rna_simpleaf_index {
         // This section takes one of three forms:
         // 1. A reference set including a fasta file and a gtf file to build an extended transcriptome index
-        // 2. A reference sequence fasta file to build an index directly
-        // 3. A pre-built index directory
         extended_transcriptome {
             ref_type = null // "spliced+unspliced" or "spliced+intronic" 
             fasta = null
             gtf = null
-        } 
+            rlen = 91
+            dedup = false
+            spliced = null
+            unspliced = null
+        }
+        // 2. A reference sequence fasta file to build an index directly
         ref_seq = null
+        // 3. A pre-built index directory
         existing_index_dir = null
+
+        // Optional parameters
+        kmer_length = 31
+        sparse = false
+        use_piscem = false
+        minimizer_length = 19
     }
 }
+
+process {
+    cpus = params.num_threads
+    memory = 64 GB
+    conda = "simpleaf_env.yaml"
+}
+conda {
+    enabled = true
+    useMamba = true
+}
+
