--- a/nextflow.config
+++ b/nextflow.config
@@ -46,7 +46,7 @@ params {
 
 process {
     cpus = params.num_threads
-    memory = 64 GB
+    memory = 64.GB
     conda = "simpleaf_env.yaml"
 }
 conda {
