first draft complete

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,13 +1,13 @@
 params {
     // The sample sheet
-    sample_sheet_tsv = null
+    sample_sheet_tsv = "${projectDir}/examples/sample_sheet.tsv"
 
     // The reference barcode csv files
-    hto_reference_barcode_csv_gz = null
-    adt_reference_barcode_csv_gz = null
+    hto_reference_barcode_csv_gz = "${projectDir}/examples/sample_sheet.tsv"
+    adt_reference_barcode_csv_gz = "${projectDir}/main.nf"
 
     // The output directory
-    output_dir = null
+    output_dir = "${projectDir}/workflow_output"
 
     // The number of threads to use
     num_threads = 8
@@ -23,7 +23,7 @@ params {
         // This section takes one of three forms:
         // 1. A reference set including a fasta file and a gtf file to build an extended transcriptome index
         extended_transcriptome {
-            ref_type = null // "spliced+unspliced" or "spliced+intronic" 
+            ref_type = "spliced+intronic" // "spliced+unspliced" or "spliced+intronic" 
             fasta = null
             gtf = null
             rlen = 91
@@ -34,7 +34,7 @@ params {
         // 2. A reference sequence fasta file to build an index directly
         ref_seq = null
         // 3. A pre-built index directory
-        existing_index_dir = null
+        existing_index_dir = "work"
 
         // Optional parameters
         kmer_length = 31
@@ -46,11 +46,12 @@ params {
 
 process {
     cpus = params.num_threads
-    memory = 64.GB
-    conda = "simpleaf_env.yaml"
+    memory = 30.GB
+    // conda = "simpleaf_env.yaml"
+    conda = "/Users/dongzehe/Desktop/COMBINE/CODE/nextflow/simpleaf_citeseq_nextflow/work/conda/simpleaf-a63f5bb5164f6591cab9d73f82a6b69e"
 }
 conda {
     enabled = true
-    useMamba = true
+    useMamba = false
 }
 
