--- a/nextflow.config
+++ b/nextflow.config
@@ -34,7 +34,10 @@ params {
         // 2. A reference sequence fasta file to build an index directly
         ref_seq = null
         // 3. A pre-built index directory
-        existing_index_dir = "work"
+        existing_index_dir {
+            index_dir = "${projectDir}/templates"
+            t2g_path = "${projectDir}/examples/t2g_3col.tsv"
+        } 
 
         // Optional parameters
         kmer_length = 31
