--- a/nextflow.config
+++ b/nextflow.config
@@ -1,16 +1,16 @@
 params {
     // The sample sheet
-    sample_sheet_tsv = "${projectDir}/examples/sample_sheet.tsv"
+    sample_sheet_tsv = "/mnt/scratch4/dongze/simpleaf_workflow_patch/data/sample_sheet.tsv"
 
     // The reference barcode csv files
-    hto_reference_barcode_csv_gz = "${projectDir}/examples/sample_sheet.tsv"
-    adt_reference_barcode_csv_gz = "${projectDir}/main.nf"
+    hto_reference_barcode_csv_gz = "/mnt/scratch4/dongze/simpleaf_workflow_patch/data/GSE128639_MNC_HTO_Barcodes.csv.gz"
+    adt_reference_barcode_csv_gz = "/mnt/scratch4/dongze/simpleaf_workflow_patch/data/GSE128639_MNC_ADT_Barcodes.csv.gz"
 
     // The output directory
     output_dir = "${projectDir}/workflow_output"
 
     // The number of threads to use
-    num_threads = 8
+    num_threads = 16
 
     // "10xv2" or "10xv3"
     chemistry = "10xv2"
@@ -24,8 +24,8 @@ params {
         // 1. A reference set including a fasta file and a gtf file to build an extended transcriptome index
         extended_transcriptome {
             ref_type = "spliced+intronic" // "spliced+unspliced" or "spliced+intronic" 
-            fasta = null
-            gtf = null
+            fasta = "/mnt/scratch3/alevin_fry_submission/refs/refdata-gex-GRCh38-2020-A/fasta/genome.fa"
+            gtf = "/mnt/scratch3/alevin_fry_submission/refs/refdata-gex-GRCh38-2020-A/genes/genes.gtf"
             rlen = 91
             dedup = false
             spliced = null
@@ -35,12 +35,13 @@ params {
         ref_seq = null
         // 3. A pre-built index directory
         existing_index_dir {
-            index_dir = "${projectDir}/templates"
-            t2g_path = "${projectDir}/examples/t2g_3col.tsv"
+            index_dir = null
+            t2g_path = null
         } 
 
         // Optional parameters
         kmer_length = 31
+	keep_duplicates = false
         sparse = false
         use_piscem = false
         minimizer_length = 19
@@ -50,8 +51,8 @@ params {
 process {
     cpus = params.num_threads
     memory = 30.GB
-    // conda = "simpleaf_env.yaml"
-    conda = "/Users/dongzehe/Desktop/COMBINE/CODE/nextflow/simpleaf_citeseq_nextflow/work/conda/simpleaf-a63f5bb5164f6591cab9d73f82a6b69e"
+    conda = "simpleaf_env.yaml"
+    //conda = "/Users/dongzehe/Desktop/COMBINE/CODE/nextflow/simpleaf_citeseq_nextflow/work/conda/simpleaf-a63f5bb5164f6591cab9d73f82a6b69e"
 }
 conda {
     enabled = true
